# qem

./: .gitignore  .pre-commit-config.yaml  DEVELOP.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: format-fix.yml  python-package.yml  tests.yml
QEM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
archieve/: gaussian_mixture_model.py
data/Au/: Example_PtIr.mat
data/STO/: SrTiO3_mp-5229_110.vasp  SrTiO3_mp-5229_conventional_standard.cif  haadf_small.hspy
data/benchmark/: outputGMMrodEmeric_100_final.mat  outputGMMrodEmeric_110_final.mat  output_fivefoldsymmetry2015_121416_2.mat
dev_guide/: preprocessing.py
docs/source/: conf.py  index.rst  intro.rst  pyStatSTEM.rst  user_guide.rst
examples/: ABO3.lammps  CRLB.ipynb  STO.ipynb  STO_110.ipynb  atomic_model.ipynb  atoms.ipynb  benchmark.ipynb  coco8.yaml  core_shell.ipynb  crystal_analyzer.ipynb  det.tif  example.py  examples.ipynb  examples_jax.ipynb  high_entropy.ipynb  image2.npy  img.txt  initial_params_5fold.h5  initial_params_rod.h5  introduction.ipynb  lattice_mapping.ipynb  voronoi.ipynb  yolo.py  yolov8n.yaml
examples/ping/: au_rod.h5  example_FitColumn  example_GMM.py  example_both.py  example_test.py
qem/: __init__.py  abberration.py  add_coordinate.py  app.py  atomic_column.py  atomic_columns.py  atomic_model.py  benchmark.py  classes.py  color.py  crystal_analyzer.py  detector.py  dm.py  fitting.py  gaussian_mixture_model.py  gui_classes.py  image_fitting.py  image_model.py  io.py  model.py  periodic_table.py  probe.py  processing.py  refine.py  region.py  stats.py  utils.py  voronoi.py  zoom.py
tests/: test_GMM.py  test_crystal_analyzer.py  test_image_fitting.py  test_model.py  test_preprocessing.py  test_refine.py
(+7 files in other folders)
